<resources>
    <string name="app_name">Dad\'s Trip Planner</string>
    <string name="screen_title_plan_trip">Plan Trip</string>
    <string name="label_i_want_to_go_to">I want to go to</string>
    <string name="hint_enter_destination">Enter destination address</string>
    <string name="radio_button_custom_location_label">Specify start address</string>
    <string name="label_from">From</string>
    <string name="radio_button_current_location">My current location</string>
    <string name="hint_enter_start_address">Specify starting address</string>
    <string name="button_next">Next</string>
    <string name="trip_time_options">I wish to</string>
    <string name="depart_at">Depart At</string>
    <string name="arrive_by">Arrive By</string>
    <string name="now_default">Now (Default)</string>
    <string name="change_date_and_time">Change Date and Time</string>
    <string name="view_favourites">View Favourites</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <!-- ... and so on for other text ... -->
</resources>