<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="24dp"
    android:paddingTop="24dp"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/screen_title_plan_trip"
        android:textColor="?android:textColorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewToLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_i_want_to_go_to"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewScreenTitle" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextViewDestination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_enter_destination"
        android:inputType="textPostalAddress"
        android:textColor="?android:textColorPrimary"
        android:textColorHint="?android:textColorSecondary"
        android:backgroundTint="?attr/colorPrimary"
        android:paddingBottom="16dp"
        android:completionThreshold="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewToLabel" />

    <TextView
        android:id="@+id/textViewFromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_from"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autoCompleteTextViewDestination" />

    <RadioGroup
        android:id="@+id/radioGroupSource"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFromLabel">

        <RadioButton
            android:id="@+id/radioButtonCurrentLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?attr/colorPrimary"
            android:checked="true"
            android:text="@string/radio_button_current_location"
            android:textColor="?android:textColorPrimary" />

        <RadioButton
            android:id="@+id/radioButtonCustomLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?attr/colorPrimary"
            android:text="@string/radio_button_custom_location_label"
            android:textColor="?android:textColorPrimary" />
    </RadioGroup>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextViewSourceCustom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/hint_enter_start_address"
        android:inputType="textPostalAddress"
        android:textColor="?android:textColorPrimary"
        android:textColorHint="?android:textColorSecondary"
        android:backgroundTint="?attr/colorPrimary"
        android:paddingBottom="16dp"
        android:enabled="false"
        android:alpha="0.5"
        android:completionThreshold="3"
        app:layout_constraintTop_toBottomOf="@id/radioGroupSource"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewTripTimeOptionsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Trip Time Options"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autoCompleteTextViewSourceCustom" />

    <RadioGroup
        android:id="@+id/radioGroupTripTimeType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textViewTripTimeOptionsLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/radioButtonDepartAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Depart At"
            android:textColor="?android:textColorPrimary"
            android:buttonTint="?attr/colorPrimary"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonArriveBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Arrive By"
            android:textColor="?android:textColorPrimary"
            android:buttonTint="?attr/colorPrimary"
            android:layout_marginStart="16dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textViewSelectedDateTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Now (Default)"
        android:textColor="?android:textColorSecondary"
        android:textSize="16sp"
        android:padding="8dp"
        android:background="?android:attr/editTextBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonChangeDateTime"
        app:layout_constraintTop_toBottomOf="@id/radioGroupTripTimeType" />

    <ImageButton
        android:id="@+id/buttonChangeDateTime"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_calendar_today"
        android:contentDescription="Change Date and Time"
        style="?android:attr/borderlessButtonStyle"
        app:tint="?attr/colorPrimary"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewSelectedDateTime"
        app:layout_constraintBottom_toBottomOf="@id/textViewSelectedDateTime"/>

    <LinearLayout
        android:id="@+id/favoritesLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSelectedDateTime"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/buttonAddToFavorites"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Add to Favorites"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/buttonViewFavorites"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="View Favorites"
            android:layout_marginStart="8dp"/>
    </LinearLayout>


    <Button
        android:id="@+id/buttonNext"
        style="@style/AppButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favoritesLayout"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>